--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -68,10 +68,10 @@
 \vs p134 6:11 Under global government the national groups will be afforded a real opportunity to realize and enjoy the personal liberties of genuine democracy. The fallacy of self\hyp{}determination will be ended. With global regulation of money and trade will come the new era of world\hyp{}wide peace. Soon may a global language evolve, and there will be at least some hope of sometime having a global religion --- or religions with a global viewpoint.
 \vs p134 6:12 Collective security will never afford peace until the collectivity includes all mankind.
 \vs p134 6:13 The political sovereignty of representative mankind government will bring lasting peace on earth, and the spiritual brotherhood of man will forever ensure good will among all men. And there is no other way whereby peace on earth and good will among men can be realized.
-\separatorshort
-\vs p134 6:14 After the death of Cymboyton, his sons encountered great difficulties in maintaining a peaceful faculty. The repercussions of Jesus’ teachings would have been much greater if the later Christian teachers who joined the Urmia faculty had exhibited more wisdom and exercised more tolerance.
-\vs p134 6:15 Cymboyton’s eldest son had appealed to Abner at Philadelphia for help, but Abner’s choice of teachers was most unfortunate in that they turned out to be unyielding and uncompromising. These teachers sought to make their religion dominant over the other beliefs. They never suspected that the oft\hyp{}referred\hyp{}to lectures of the caravan conductor had been delivered by Jesus himself.
-\vs p134 6:16 As confusion increased in the faculty, the three brothers withdrew their financial support, and after five years the school closed. Later it was reopened as a Mithraic temple and eventually burned down in connection with one of their orgiastic celebrations.
+\vs p134 6:14 \separatorshort
+\vs p134 6:15 After the death of Cymboyton, his sons encountered great difficulties in maintaining a peaceful faculty. The repercussions of Jesus’ teachings would have been much greater if the later Christian teachers who joined the Urmia faculty had exhibited more wisdom and exercised more tolerance.
+\vs p134 6:16 Cymboyton’s eldest son had appealed to Abner at Philadelphia for help, but Abner’s choice of teachers was most unfortunate in that they turned out to be unyielding and uncompromising. These teachers sought to make their religion dominant over the other beliefs. They never suspected that the oft\hyp{}referred\hyp{}to lectures of the caravan conductor had been delivered by Jesus himself.
+\vs p134 6:17 As confusion increased in the faculty, the three brothers withdrew their financial support, and after five years the school closed. Later it was reopened as a Mithraic temple and eventually burned down in connection with one of their orgiastic celebrations.
 \usection{7.\bibnobreakspace The Thirty\hyp{}First Year (A.D.\,25)}
 \vs p134 7:1 When Jesus returned from the journey to the Caspian Sea, he knew that his world travels were about finished. He made only one more trip outside of Palestine, and that was into Syria. After a brief visit to Capernaum, he went to Nazareth, stopping over a few days to visit. In the middle of April he left Nazareth for Tyre. From there he journeyed on north, tarrying for a few days at Sidon, but his destination was Antioch.
 \vs p134 7:2 This is the year of Jesus’ solitary wanderings through Palestine and Syria. Throughout this year of travel he was known by various names in different parts of the country: the carpenter of Nazareth, the boatbuilder of Capernaum, the scribe of Damascus, and the teacher of Alexandria.
