--- a/tex/p144.tex
+++ b/tex/p144.tex
@@ -24,7 +24,7 @@
 \usection{3.\bibnobreakspace The Believer’s Prayer}
 \vs p144 3:1 But the apostles were not yet satisfied; they desired Jesus to give them a model prayer which they could teach the new disciples. After listening to this discourse on prayer, James Zebedee said: “Very good, Master, but we do not desire a form of prayer for ourselves so much as for the newer believers who so frequently beseech us, ‘Teach us how acceptably to pray to the Father in heaven.’”
 \vs p144 3:2 When James had finished speaking, Jesus said: \textcolour{ubdarkred}{“If, then, you still desire such a prayer, I would present the one which I taught my brothers and sisters in Nazareth”:}
-\vsetoff
+\vspace*{1ex}
 \vs p144 3:3 \textcolour{ubdarkred}{Our Father who is in heaven,}
 \vs p144 3:4 \hsetoff \textcolour{ubdarkred}{Hallowed be your name.}
 \vs p144 3:5 \textcolour{ubdarkred}{Your kingdom come; your will be done}
@@ -35,7 +35,7 @@
 \vs p144 3:10 \hsetoff \textcolour{ubdarkred}{As we also have forgiven our debtors.}
 \vs p144 3:11 \textcolour{ubdarkred}{Save us in temptation, deliver us from evil,}
 \vs p144 3:12 \hsetoff \textcolour{ubdarkred}{And increasingly make us perfect like yourself.}
-\vsetoff
+\vspace*{1ex}
 \vs p144 3:13 \pc It is not strange that the apostles desired Jesus to teach them a model prayer for believers. John the Baptist had taught his followers several prayers; all great teachers had formulated prayers for their pupils. The religious teachers of the Jews had some 25 or 30 set prayers which they recited in the synagogues and even on the street corners. Jesus was particularly averse to praying in public. Up to this time the 12 had heard him pray only a few times. They observed him spending entire nights at prayer or worship, and they were very curious to know the manner or form of his petitions. They were really hard pressed to know what to answer the multitudes when they asked to be taught how to pray as John had taught his disciples.
 \vs p144 3:14 Jesus taught the 12 always to pray in secret; to go off by themselves amidst the quiet surroundings of nature or to go in their rooms and shut the doors when they engaged in prayer.
 \vs p144 3:15 After Jesus’ death and ascension to the Father it became the practice of many believers to finish this so\hyp{}called Lord’s prayer by the addition of --- “In the name of the Lord Jesus Christ.” Still later on, two lines were lost in copying, and there was added to this prayer an extra clause, reading: “For yours is the kingdom and the power and the glory, forevermore.”
@@ -61,7 +61,7 @@
 \vs p144 4:11 Of all the apostles, Peter and James came the nearest to comprehending the Master’s teaching about prayer and worship.
 \usection{5.\bibnobreakspace Other Forms of Prayer}
 \vs p144 5:1 From time to time, during the remainder of Jesus’ sojourn on earth, he brought to the notice of the apostles several additional forms of prayer, but he did this only in illustration of other matters, and he enjoined that these “parable prayers” should not be taught to the multitudes. Many of them were from other inhabited planets, but this fact Jesus did not reveal to the 12. Among these prayers were the following:
-\vsetoff
+\vspace*{1ex}
 \vs p144 5:2 Our Father in whom consist the universe realms,
 \vs p144 5:3 \hsetoff Uplifted be your name and all\hyp{}glorious your character.
 \vs p144 5:4 Your presence encompasses us, and your glory is manifested
@@ -71,105 +71,105 @@
 \vs p144 5:8 For yours is the glorious indwelling, the everlasting power,
 \vs p144 5:9 \hsetoff And to us, the eternal gift of the infinite love of your Son.
 \vs p144 5:10 Even so, and everlastingly true.
-\separatorshort
-\vs p144 5:11 Our creative Parent, who is in the centre of the universe,
-\vs p144 5:12 \hsetoff Bestow upon us your nature and give to us your character.
-\vs p144 5:13 Make us sons and daughters of yours by grace
-\vs p144 5:14 \hsetoff And glorify your name through our eternal achievement.
-\vs p144 5:15 Your adjusting and controlling spirit give to live and dwell within us
-\vs p144 5:16 \hsetoff That we may do your will on this sphere as angels do your bidding in light.
-\vs p144 5:17 Sustain us this day in our progress along the path of truth.
-\vs p144 5:18 \hsetoff Deliver us from inertia, evil, and all sinful transgression.
-\vs p144 5:19 Be patient with us as we show loving\hyp{}kindness to our fellows.
-\vs p144 5:20 \hsetoff Shed abroad the spirit of your mercy in our creature hearts.
-\vs p144 5:21 Lead us by your own hand, step by step, through the uncertain maze of life,
-\vs p144 5:22 \hsetoff And when our end shall come, receive into your own bosom our faithful spirits.
-\vs p144 5:23 Even so, not our desires but your will be done.
-\separatorshort
-\vs p144 5:24 Our perfect and righteous heavenly Father,
-\vs p144 5:25 \hsetoff This day guide and direct our journey.
-\vs p144 5:26 Sanctify our steps and co\hyp{}ordinate our thoughts.
-\vs p144 5:27 \hsetoff Ever lead us in the ways of eternal progress.
-\vs p144 5:28 Fill us with wisdom to the fullness of power
-\vs p144 5:29 \hsetoff And vitalize us with your infinite energy.
-\vs p144 5:30 Inspire us with the divine consciousness of
-\vs p144 5:31 \hsetoff The presence and guidance of the seraphic hosts.
-\vs p144 5:32 Guide us ever upward in the pathway of light;
-\vs p144 5:33 \hsetoff Justify us fully in the day of the great judgment.
-\vs p144 5:34 Make us like yourself in eternal glory
-\vs p144 5:35 \hsetoff And receive us into your endless service on high.
-\separatorshort
-\vs p144 5:36 Our Father who is in the mystery,
-\vs p144 5:37 \hsetoff Reveal to us your holy character.
-\vs p144 5:38 Give your children on earth this day
-\vs p144 5:39 \hsetoff To see the way, the light, and the truth.
-\vs p144 5:40 Show us the pathway of eternal progress
-\vs p144 5:41 \hsetoff And give us the will to walk therein.
-\vs p144 5:42 Establish within us your divine kingship
-\vs p144 5:43 \hsetoff And thereby bestow upon us the full mastery of self.
-\vs p144 5:44 Let us not stray into paths of darkness and death;
-\vs p144 5:45 \hsetoff Lead us everlastingly beside the waters of life.
-\vs p144 5:46 Hear these our prayers for your own sake;
-\vs p144 5:47 \hsetoff Be pleased to make us more and more like yourself.
-\vs p144 5:48 At the end, for the sake of the divine Son,
-\vs p144 5:49 \hsetoff Receive us into the eternal arms.
-\vs p144 5:50 Even so, not our will but yours be done.
-\separatorshort
-\vs p144 5:51 Glorious Father and Mother, in one parent combined,
-\vs p144 5:52 \hsetoff Loyal would we be to your divine nature.
-\vs p144 5:53 Your own self to live again in and through us
-\vs p144 5:54 \hsetoff By the gift and bestowal of your divine spirit,
-\vs p144 5:55 Thus reproducing you imperfectly in this sphere
-\vs p144 5:56 \hsetoff As you are perfectly and majestically shown on high.
-\vs p144 5:57 Give us day by day your sweet ministry of brotherhood
-\vs p144 5:58 \hsetoff And lead us moment by moment in the pathway of loving service.
-\vs p144 5:59 Be you ever and unfailingly patient with us
-\vs p144 5:60 \hsetoff Even as we show forth your patience to our children.
-\vs p144 5:61 Give us the divine wisdom that does all things well
-\vs p144 5:62 \hsetoff And the infinite love that is gracious to every creature.
-\vs p144 5:63 Bestow upon us your patience and loving\hyp{}kindness
-\vs p144 5:64 \hsetoff That our charity may enfold the weak of the realm.
-\vs p144 5:65 And when our career is finished, make it an honour to your name,
-\vs p144 5:66 \hsetoff A pleasure to your good spirit, and a satisfaction to our soul helpers.
-\vs p144 5:67 Not as we wish, our loving Father, but as you desire the eternal good of your mortal children,
-\vs p144 5:68 \hsetoff Even so may it be.
-\separatorshort
-\vs p144 5:69 Our all\hyp{}faithful Source and all\hyp{}powerful Centre,
-\vs p144 5:70 \hsetoff Reverent and holy be the name of your all\hyp{}gracious Son.
-\vs p144 5:71 Your bounties and your blessings have descended upon us,
-\vs p144 5:72 \hsetoff Thus empowering us to perform your will and execute your bidding.
-\vs p144 5:73 Give us moment by moment the sustenance of the tree of life;
-\vs p144 5:74 \hsetoff Refresh us day by day with the living waters of the river thereof.
-\vs p144 5:75 Step by step lead us out of darkness and into the divine light.
-\vs p144 5:76 \hsetoff Renew our minds by the transformations of the indwelling spirit,
-\vs p144 5:77 And when the mortal end shall finally come upon us,
-\vs p144 5:78 \hsetoff Receive us to yourself and send us forth in eternity.
-\vs p144 5:79 Crown us with celestial diadems of fruitful service,
-\vs p144 5:80 \hsetoff And we shall glorify the Father, the Son, and the Holy Influence.
-\vs p144 5:81 Even so, throughout a universe without end.
-\separatorshort
-\vs p144 5:82 Our Father who dwells in the secret places of the universe,
-\vs p144 5:83 \hsetoff Honoured be your name, reverenced your mercy, and respected your judgment.
-\vs p144 5:84 Let the sun of righteousness shine upon us at noontime,
-\vs p144 5:85 \hsetoff While we beseech you to guide our wayward steps in the twilight.
-\vs p144 5:86 Lead us by the hand in the ways of your own choosing
-\vs p144 5:87 \hsetoff And forsake us not when the path is hard and the hours are dark.
-\vs p144 5:88 Forget us not as we so often neglect and forget you.
-\vs p144 5:89 \hsetoff But be you merciful and love us as we desire to love you.
-\vs p144 5:90 Look down upon us in kindness and forgive us in mercy
-\vs p144 5:91 \hsetoff As we in justice forgive those who distress and injure us.
-\vs p144 5:92 May the love, devotion, and bestowal of the majestic Son
-\vs p144 5:93 \hsetoff Make available life everlasting with your endless mercy and love.
-\vs p144 5:94 May the God of universes bestow upon us the full measure of his spirit;
-\vs p144 5:95 \hsetoff Give us grace to yield to the leading of this spirit.
-\vs p144 5:96 By the loving ministry of devoted seraphic hosts
-\vs p144 5:97 \hsetoff May the Son guide and lead us to the end of the age.
-\vs p144 5:98 Make us ever and increasingly like yourself
-\vs p144 5:99 \hsetoff And at our end receive us into the eternal Paradise embrace.
-\vs p144 5:100 Even so, in the name of the bestowal Son
-\vs p144 5:101 \hsetoff And for the honour and glory of the Supreme Father.
-\vsetoff
-\vs p144 5:102 Though the apostles were not at liberty to present these prayer lessons in their public teachings, they profited much from all of these revelations in their personal religious experiences. Jesus utilized these and other prayer models as illustrations in connection with the intimate instruction of the 12, and specific permission has been granted for transcribing these seven specimen prayers into this record.
+\vs p144 5:11 \separatorshort
+\vs p144 5:12 Our creative Parent, who is in the centre of the universe,
+\vs p144 5:13 \hsetoff Bestow upon us your nature and give to us your character.
+\vs p144 5:14 Make us sons and daughters of yours by grace
+\vs p144 5:15 \hsetoff And glorify your name through our eternal achievement.
+\vs p144 5:16 Your adjusting and controlling spirit give to live and dwell within us
+\vs p144 5:17 \hsetoff That we may do your will on this sphere as angels do your bidding in light.
+\vs p144 5:18 Sustain us this day in our progress along the path of truth.
+\vs p144 5:19 \hsetoff Deliver us from inertia, evil, and all sinful transgression.
+\vs p144 5:20 Be patient with us as we show loving\hyp{}kindness to our fellows.
+\vs p144 5:21 \hsetoff Shed abroad the spirit of your mercy in our creature hearts.
+\vs p144 5:22 Lead us by your own hand, step by step, through the uncertain maze of life,
+\vs p144 5:23 \hsetoff And when our end shall come, receive into your own bosom our faithful spirits.
+\vs p144 5:24 Even so, not our desires but your will be done.
+\vs p144 5:25 \separatorshort
+\vs p144 5:26 Our perfect and righteous heavenly Father,
+\vs p144 5:27 \hsetoff This day guide and direct our journey.
+\vs p144 5:28 Sanctify our steps and co\hyp{}ordinate our thoughts.
+\vs p144 5:29 \hsetoff Ever lead us in the ways of eternal progress.
+\vs p144 5:30 Fill us with wisdom to the fullness of power
+\vs p144 5:31 \hsetoff And vitalize us with your infinite energy.
+\vs p144 5:32 Inspire us with the divine consciousness of
+\vs p144 5:33 \hsetoff The presence and guidance of the seraphic hosts.
+\vs p144 5:34 Guide us ever upward in the pathway of light;
+\vs p144 5:35 \hsetoff Justify us fully in the day of the great judgment.
+\vs p144 5:36 Make us like yourself in eternal glory
+\vs p144 5:37 \hsetoff And receive us into your endless service on high.
+\vs p144 5:38 \separatorshort
+\vs p144 5:39 Our Father who is in the mystery,
+\vs p144 5:40 \hsetoff Reveal to us your holy character.
+\vs p144 5:41 Give your children on earth this day
+\vs p144 5:42 \hsetoff To see the way, the light, and the truth.
+\vs p144 5:43 Show us the pathway of eternal progress
+\vs p144 5:44 \hsetoff And give us the will to walk therein.
+\vs p144 5:45 Establish within us your divine kingship
+\vs p144 5:46 \hsetoff And thereby bestow upon us the full mastery of self.
+\vs p144 5:47 Let us not stray into paths of darkness and death;
+\vs p144 5:48 \hsetoff Lead us everlastingly beside the waters of life.
+\vs p144 5:49 Hear these our prayers for your own sake;
+\vs p144 5:50 \hsetoff Be pleased to make us more and more like yourself.
+\vs p144 5:51 At the end, for the sake of the divine Son,
+\vs p144 5:52 \hsetoff Receive us into the eternal arms.
+\vs p144 5:53 Even so, not our will but yours be done.
+\vs p144 5:54 \separatorshort
+\vs p144 5:55 Glorious Father and Mother, in one parent combined,
+\vs p144 5:56 \hsetoff Loyal would we be to your divine nature.
+\vs p144 5:57 Your own self to live again in and through us
+\vs p144 5:58 \hsetoff By the gift and bestowal of your divine spirit,
+\vs p144 5:59 Thus reproducing you imperfectly in this sphere
+\vs p144 5:60 \hsetoff As you are perfectly and majestically shown on high.
+\vs p144 5:61 Give us day by day your sweet ministry of brotherhood
+\vs p144 5:62 \hsetoff And lead us moment by moment in the pathway of loving service.
+\vs p144 5:63 Be you ever and unfailingly patient with us
+\vs p144 5:64 \hsetoff Even as we show forth your patience to our children.
+\vs p144 5:65 Give us the divine wisdom that does all things well
+\vs p144 5:66 \hsetoff And the infinite love that is gracious to every creature.
+\vs p144 5:67 Bestow upon us your patience and loving\hyp{}kindness
+\vs p144 5:68 \hsetoff That our charity may enfold the weak of the realm.
+\vs p144 5:69 And when our career is finished, make it an honour to your name,
+\vs p144 5:70 \hsetoff A pleasure to your good spirit, and a satisfaction to our soul helpers.
+\vs p144 5:71 Not as we wish, our loving Father, but as you desire the eternal good of your mortal children,
+\vs p144 5:72 \hsetoff Even so may it be.
+\vs p144 5:73 \separatorshort
+\vs p144 5:74 Our all\hyp{}faithful Source and all\hyp{}powerful Centre,
+\vs p144 5:75 \hsetoff Reverent and holy be the name of your all\hyp{}gracious Son.
+\vs p144 5:76 Your bounties and your blessings have descended upon us,
+\vs p144 5:77 \hsetoff Thus empowering us to perform your will and execute your bidding.
+\vs p144 5:78 Give us moment by moment the sustenance of the tree of life;
+\vs p144 5:79 \hsetoff Refresh us day by day with the living waters of the river thereof.
+\vs p144 5:80 Step by step lead us out of darkness and into the divine light.
+\vs p144 5:81 \hsetoff Renew our minds by the transformations of the indwelling spirit,
+\vs p144 5:82 And when the mortal end shall finally come upon us,
+\vs p144 5:83 \hsetoff Receive us to yourself and send us forth in eternity.
+\vs p144 5:84 Crown us with celestial diadems of fruitful service,
+\vs p144 5:85 \hsetoff And we shall glorify the Father, the Son, and the Holy Influence.
+\vs p144 5:86 Even so, throughout a universe without end.
+\vs p144 5:87 \separatorshort
+\vs p144 5:88 Our Father who dwells in the secret places of the universe,
+\vs p144 5:89 \hsetoff Honoured be your name, reverenced your mercy, and respected your judgment.
+\vs p144 5:90 Let the sun of righteousness shine upon us at noontime,
+\vs p144 5:91 \hsetoff While we beseech you to guide our wayward steps in the twilight.
+\vs p144 5:92 Lead us by the hand in the ways of your own choosing
+\vs p144 5:93 \hsetoff And forsake us not when the path is hard and the hours are dark.
+\vs p144 5:94 Forget us not as we so often neglect and forget you.
+\vs p144 5:95 \hsetoff But be you merciful and love us as we desire to love you.
+\vs p144 5:96 Look down upon us in kindness and forgive us in mercy
+\vs p144 5:97 \hsetoff As we in justice forgive those who distress and injure us.
+\vs p144 5:98 May the love, devotion, and bestowal of the majestic Son
+\vs p144 5:99 \hsetoff Make available life everlasting with your endless mercy and love.
+\vs p144 5:100 May the God of universes bestow upon us the full measure of his spirit;
+\vs p144 5:101 \hsetoff Give us grace to yield to the leading of this spirit.
+\vs p144 5:102 By the loving ministry of devoted seraphic hosts
+\vs p144 5:103 \hsetoff May the Son guide and lead us to the end of the age.
+\vs p144 5:104 Make us ever and increasingly like yourself
+\vs p144 5:105 \hsetoff And at our end receive us into the eternal Paradise embrace.
+\vs p144 5:106 Even so, in the name of the bestowal Son
+\vs p144 5:107 \hsetoff And for the honour and glory of the Supreme Father.
+\vspace*{1ex}
+\vs p144 5:108 Though the apostles were not at liberty to present these prayer lessons in their public teachings, they profited much from all of these revelations in their personal religious experiences. Jesus utilized these and other prayer models as illustrations in connection with the intimate instruction of the 12, and specific permission has been granted for transcribing these seven specimen prayers into this record.
 \usection{6.\bibnobreakspace Conference with John’s Apostles}
 \vs p144 6:1 Around the first of October, Philip and some of his fellow apostles were in a near\hyp{}by village buying food when they met some of the apostles of John the Baptist. As a result of this chance meeting in the market place there came about a three weeks’ conference at the Gilboa camp between the apostles of Jesus and the apostles of John, for John had recently appointed 12 of his leaders to be apostles, following the precedent of Jesus. John had done this in response to the urging of Abner, the chief of his loyal supporters. Jesus was present at the Gilboa camp throughout the first week of this joint conference but absented himself the last two weeks.
 \vs p144 6:2 By the beginning of the second week of this month, Abner had assembled all of his associates at the Gilboa camp and was prepared to go into council with the apostles of Jesus. For three weeks these 24 men were in session three times a day and for six days each week. The first week Jesus mingled with them between their forenoon, afternoon, and evening sessions. They wanted the Master to meet with them and preside over their joint deliberations, but he steadfastly refused to participate in their discussions, though he did consent to speak to them on three occasions. These talks by Jesus to the 24 were on sympathy, co\hyp{}operation, and tolerance.
