--- a/tex/p159.tex
+++ b/tex/p159.tex
@@ -5,7 +5,7 @@
 \usection{1.\bibnobreakspace The Sermon on Forgiveness}
 \vs p159 1:1 One evening at Hippos, in answer to a disciple’s question, Jesus taught the lesson on forgiveness. Said the Master:
 \vs p159 1:2 \pc \textcolour{ubdarkred}{“If a kindhearted man has 100 sheep and 1 of them goes astray, does he not immediately leave the 99 and go out in search of the 1 that has gone astray? And if he is a good shepherd, will he not keep up his quest for the lost sheep until he finds it? And then, when the shepherd has found his lost sheep, he lays it over his shoulder and, going home rejoicing, calls to his friends and neighbours, ‘Rejoice with me, for I have found my sheep that was lost.’ I declare that there is more joy in heaven over one sinner who repents than over 99 righteous persons who need no repentance. Even so, it is not the will of my Father in heaven that one of these little ones should go astray, much less that they should perish. In your religion God may receive repentant sinners; in the gospel of the kingdom the Father goes forth to find them even before they have seriously thought of repentance.}
-\vs p159 1:3 \textcolour{ubdarkred}{“The Father in heaven loves his children, and therefore should you learn to love one another; the Father in heaven forgives you your sins; therefore should you learn to forgive one another. If your brother sins against you, go to him and with tact and patience show him his fault. And do all this between you and him alone. If he will listen to you, then have you won your brother. But if your brother will not hear you, if he persists in the error of his way, go again to him, taking with you one or two mutual friends that you may thus have two or even three witnesses to confirm your testimony and establish the fact that you have dealt justly and mercifully with your offending brother. Now if he refuses to hear your brethren, you may tell the whole story to the congregation, and then, if he refuses to hear the brotherhood, let them take such action as they deem wise; let such an unruly member become an outcast from the kingdom. While you cannot pretend to sit in judgment on the souls of your fellows, and while you may not forgive sins or otherwise presume to usurp the prerogatives of the supervisors of the heavenly hosts, at the same time, it has been committed to your hands that you should maintain temporal order in the kingdom on earth. While you may not meddle with the divine decrees concerning eternal life, you shall determine the issues of conduct as they concern the temporal welfare of the brotherhood on earth. And so, in all these matters connected with the discipline of the brotherhood, whatsoever you shall decree on earth shall be\fnc{\textbf{earth shall be}, In 1995 text: \bibtextul{earth, shall be}.} recognized in heaven. Although you cannot determine the eternal fate of the individual, you may legislate regarding the conduct of the group, for, where two or three of you agree concerning any of these things and ask of me, it shall be done for you if your petition is not inconsistent with the will of my Father in heaven. And all this is ever true, for, where two or three believers are gathered together, there am I in the midst of them.”}
+\vs p159 1:3 \textcolour{ubdarkred}{“The Father in heaven loves his children, and therefore should you learn to love one another; the Father in heaven forgives you your sins; therefore should you learn to forgive one another. If your brother sins against you, go to him and with tact and patience show him his fault. And do all this between you and him alone. If he will listen to you, then have you won your brother. But if your brother will not hear you, if he persists in the error of his way, go again to him, taking with you one or two mutual friends that you may thus have two or even three witnesses to confirm your testimony and establish the fact that you have dealt justly and mercifully with your offending brother. Now if he refuses to hear your brethren, you may tell the whole story to the congregation, and then, if he refuses to hear the brotherhood, let them take such action as they deem wise; let such an unruly member become an outcast from the kingdom. While you cannot pretend to sit in judgment on the souls of your fellows, and while you may not forgive sins or otherwise presume to usurp the prerogatives of the supervisors of the heavenly hosts, at the same time, it has been committed to your hands that you should maintain temporal order in the kingdom on earth. While you may not meddle with the divine decrees concerning eternal life, you shall determine the issues of conduct as they concern the temporal welfare of the brotherhood on earth. And so, in all these matters connected with the discipline of the brotherhood, whatsoever you shall decree on earth, shall be recognized in heaven. Although you cannot determine the eternal fate of the individual, you may legislate regarding the conduct of the group, for, where two or three of you agree concerning any of these things and ask of me, it shall be done for you if your petition is not inconsistent with the will of my Father in heaven. And all this is ever true, for, where two or three believers are gathered together, there am I in the midst of them.”}
 \vs p159 1:4 \pc Simon Peter was the apostle in charge of the workers at Hippos, and when he heard Jesus thus speak, he asked: “Lord, how often shall my brother sin against me, and I forgive him? Until 7 times?” And Jesus answered Peter: \textcolour{ubdarkred}{“Not only 7 times but even to 70 times and 7. Therefore may the kingdom of heaven be likened to a certain king who ordered a financial reckoning with his stewards. And when they had begun to conduct this examination of accounts, one of his chief retainers was brought before him confessing that he owed his king 10,000 talents. Now this officer of the king’s court pleaded that hard times had come upon him, and that he did not have wherewith to pay this obligation. And so the king commanded that his property be confiscated, and that his children be sold to pay his debt. When this chief steward heard this stern decree, he fell down on his face before the king and implored him to have mercy and grant him more time, saying, ‘Lord, have a little more patience with me, and I will pay you all.’ And when the king looked upon this negligent servant and his family, he was moved with compassion. He ordered that he should be released, and that the loan should be wholly forgiven.}
 \vs p159 1:5 \textcolour{ubdarkred}{“And this chief steward, having thus received mercy and forgiveness at the hands of the king, went about his business, and finding one of his subordinate stewards who owed him a mere 100 denarii, he laid hold upon him and, taking him by the throat, said, ‘Pay me all you owe.’ And then did this fellow steward fall down before the chief steward and, beseeching him, said: ‘Only have patience with me, and I will presently be able to pay you.’ But the chief steward would not show mercy to his fellow steward but rather had him cast in prison until he should pay his debt. When his fellow servants saw what had happened, they were so distressed that they went and told their lord and master, the king. When the king heard of the doings of his chief steward, he called this ungrateful and unforgiving man before him and said: ‘You are a wicked and unworthy steward. When you sought for compassion, I freely forgave you your entire debt. Why did you not also show mercy to your fellow steward, even as I showed mercy to you?’ And the king was so very angry that he delivered his ungrateful chief steward to the jailers that they might hold him until he had paid all that was due. And even so shall my heavenly Father show the more abundant mercy to those who freely show mercy to their fellows. How can you come to God asking consideration for your shortcomings when you are wont to chastise your brethren for being guilty of these same human frailties? I say to all of you: Freely you have received the good things of the kingdom; therefore freely give to your fellows on earth.”}
 \vs p159 1:6 \pc Thus did Jesus teach the dangers and illustrate the unfairness of sitting in personal judgment upon one’s fellows. Discipline must be maintained, justice must be administered, but in all these matters the wisdom of the brotherhood should prevail. Jesus invested legislative and judicial authority in the \bibemph{group,} not in the \bibemph{individual.} Even this investment of authority in the group must not be exercised as personal authority. There is always danger that the verdict of an individual may be warped by prejudice or distorted by passion. Group judgment is more likely to remove the dangers and eliminate the unfairness of personal bias. Jesus sought always to minimize the elements of unfairness, retaliation, and vengeance.
